fixed menu and scene text layout bug

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,11 @@ main {
     list-style-type: none;
 }
 
+#scene-description {
+    width: 400px;
+}
+
 #battle-menu ul li {
     text-align: left;
+    width: 250px;
 }
